# game_of_life_to_video

./: README.md  pyproject.toml
docs/: search.js
docs/src/: game_of_life.html
docs/src/game_of_life/: constants.html  converters.html  definitions.html  game_of_life.html  main.html  renderer.html
src/: constants.py  definitions.py  game.py  main.py  renderer.py
src/goltv/: __init__.py  constants.py  converters.py  definitions.py  game_of_life.py  main.py  renderer.py
src/tests/: test_converters.py  test_game_of_life.py  test_main.py  test_renderer.py
