[tool.poetry]
name = "goltv"
version = "0.1.0"
description = "GOL to video"
authors = ["Filip Krawczyk <fil.krawczyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.9.0.80"
ffmpeg-python = "^0.2.0"
click = "^8.1.7"
numpy = "^1.26.3"

[tool.poetry.scripts]
goltv = "goltv:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
